# pytest-playwright-visual

./: README.md  setup.cfg
pytest_playwright_visual/: plugin.py
