[metadata]
name = pytest-playwright-visual
version = 1.0.0
url = git+https://github.com/marcus320/pytest-playwright-visual.git
[flake8]
ignore =
    E501
    W503
    E302
[mypy]
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
check_untyped_defs = True
disallow_untyped_defs = True
[tool:pytest]
addopts = -p no:playwright --runpytest subprocess -vv
testpaths =
    tests
